# rss_autogen_giscus

./: .gitignore  Cargo.toml  Containerfile  README.md  build.rs  buildah_container.sh
.github/actions/rss_autogen_giscus/: Containerfile  action.yaml
.github/workflows/: generate_comments.yaml.template
gh_gql_schema/: Cargo.toml  README.md  build.rs
gh_gql_schema/src/: lib.rs
graphql/: graphql.config.json
src/: constants.rs  gql.rs  lib.rs  main.rs  post.rs
src/gql/: gql_structs.rs
