[package]
name = "rss-autogen-giscus"
version = "0.1.0"
authors = ["Cameron Rodriguez <dev@camrod.me>"]
edition = "2021"
license = "Apache-2.0"
description = "A small program to autogenerate GitHub Discussions from Atom/RSS feeds."

[dependencies]
cynic = { version = "3", features = ["http-reqwest", "rkyv"] }
feed-rs = "~1.3"
graphql_client = { version = "~0.13", features = ["reqwest"] }
reqwest = { version = "~0.11", features = ["json"] }
serde = "~1.0"
serde_json = "~1.0"
scraper = "~0.16"
tokio = { version = "~1.28", features = ["macros", "rt-multi-thread"] }
url = "2"

[build-dependencies]
cynic-codegen = "3"