[workspace]
members = ["gh_gql_schema"]

[workspace.package]
version = "0.1.1"
authors = ["Cameron Rodriguez <dev@camrod.me>"]
edition = "2021"
homepage = "https://github.com/cam-rod/rss_autogen_giscus"
repository = "https://github.com/cam-rod/rss_autogen_giscus"
license = "Apache-2.0"

[workspace.dependencies]
cynic = "3"
serde = "1.0"

[package]
name = "rss_autogen_giscus"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Autogenerate GitHub Discussions from RSS feeds for Giscus"
documentation = "https://docs.rs/rss_autogen_giscus"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["giscus", "github-discussions", "rss", "blog"]
categories = ["web-programming"]
exclude = [".github/", "Containerfile", "*.iml"]

[dependencies]
cynic = { workspace = true, features = ["http-reqwest"] }
chrono = { version = "0.4", features = ["clock"] }
feed-rs = "1.3"
gh_gql_schema = { version = "0.1", path = "gh_gql_schema" }
graphql_client = { version = "0.13", features = ["reqwest"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { workspace = true }
scraper = "0.17"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
url = "2"

[dev-dependencies]
tokio-test = "0.4"
serial_test = "2"
