[package]
name = "gh_gql_schema"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Crate with GitHub GraphQL API"
license.workspace = true

[dependencies]
cynic = { workspace = true, features = ["rkyv"] }
serde = { workspace = true }

[build-dependencies]
cynic-codegen = "3"