[package]
name = "gh_gql_schema"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Cynic bindings to the GitHub GraphQL API for rss_autogen_giscus"
documentation = "https://docs.rs/gh_gql_schema"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["github", "graphql", "cynic"]
categories = ["api-bindings"]

[dependencies]
cynic = { workspace = true, features = ["rkyv"] }
serde = { workspace = true }

[build-dependencies]
cynic-codegen = "3"